--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
   buildToolsVersion "20.0.0"
 
   defaultConfig {
-    applicationId "com.sayler.lpreview"
+    applicationId "com.sayler.bonjourmadame"
     minSdkVersion 21
     targetSdkVersion 21
     versionCode 1
