--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
   compileSdkVersion 21
-  buildToolsVersion "20.0.0"
+  buildToolsVersion "21.1.2"
 
   defaultConfig {
     applicationId "com.sayler.bonjourmadame"
@@ -13,15 +13,15 @@ android {
   }
   buildTypes {
     release {
-      runProguard false
+      minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
 }
 
 dependencies {
-  compile 'com.android.support:support-v4:21.0.+'
-  compile 'com.android.support:appcompat-v7:21.0.+'
+  compile 'com.android.support:support-v4:21.0.3'
+  compile 'com.android.support:appcompat-v7:21.0.3'
   compile 'com.nineoldandroids:library:2.4.0'
   compile fileTree(dir: 'libs', include: ['*.jar'])
 }
