--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,13 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+  lintOptions {
+    disable 'InvalidPackage'
+  }
 }
 
 dependencies {
+  compile 'com.jakewharton:butterknife:6.1.0'
   compile 'com.android.support:support-v4:21.0.3'
   compile 'com.android.support:appcompat-v7:21.0.3'
   compile 'com.nineoldandroids:library:2.4.0'
