--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.neenbedankt.android-apt'
 android {
   compileSdkVersion 21
   buildToolsVersion "21.1.2"
@@ -20,12 +20,36 @@ android {
   lintOptions {
     disable 'InvalidPackage'
   }
-}
+  packagingOptions {
+    exclude 'LICENSE.txt'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/license.txt'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/notice.txt'
+  }
 
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+
+}
 dependencies {
+  apt "com.google.dagger:dagger-compiler:2.0-SNAPSHOT"
+  compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
   compile 'com.jakewharton:butterknife:6.1.0'
   compile 'com.android.support:support-v4:21.0.3'
   compile 'com.android.support:appcompat-v7:21.0.3'
   compile 'com.nineoldandroids:library:2.4.0'
+  compile 'com.squareup.picasso:picasso:2.5.0'
+  compile 'com.squareup.retrofit:retrofit:1.9.0'
+  compile 'com.google.code.gson:gson:2.3'
+  compile 'io.reactivex:rxandroid:0.24.0'
+  compile 'com.google.code.findbugs:jsr305:1.3.9'
+  compile 'org.glassfish:javax.annotation:10.0-b28'
+  compile project(':data')
+
   compile fileTree(dir: 'libs', include: ['*.jar'])
 }
