--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 android {
   compileSdkVersion 21
   buildToolsVersion "21.1.2"
@@ -49,7 +50,7 @@ dependencies {
   compile 'io.reactivex:rxandroid:0.24.0'
   compile 'com.google.code.findbugs:jsr305:1.3.9'
   compile 'org.glassfish:javax.annotation:10.0-b28'
-  compile project(':data')
+  compile project(':network')
 
   compile fileTree(dir: 'libs', include: ['*.jar'])
 }
