--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
   compile 'io.reactivex:rxandroid:0.24.0'
   compile 'com.google.code.findbugs:jsr305:1.3.9'
   compile 'org.glassfish:javax.annotation:10.0-b28'
+  compile 'com.squareup.picasso:picasso:2.5.0'
+  compile 'org.michaelevans.colorart:library:0.0.3'
+  compile 'com.github.thiagokimo:alexei-library:1.+'
   compile project(':network')
 
   compile fileTree(dir: 'libs', include: ['*.jar'])
