--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ android {
 
 }
 dependencies {
-  apt "com.google.dagger:dagger-compiler:2.0-SNAPSHOT"
-  compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
+  compile 'com.google.dagger:dagger:2.1-SNAPSHOT'
+  apt 'com.google.dagger:dagger-compiler:2.1-SNAPSHOT'
   compile 'com.jakewharton:butterknife:6.1.0'
   compile 'com.android.support:support-v4:21.0.3'
   compile 'com.android.support:appcompat-v7:21.0.3'
