--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,6 @@ dependencies {
   compile 'org.michaelevans.colorart:library:0.0.3'
   compile 'com.github.thiagokimo:alexei-library:1.+'
   compile project(':network')
-
-  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile fileTree(include: ['*.jar'], dir: 'libs')
+  compile project(':PhotoView')
 }
