--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
   compile 'com.jakewharton:butterknife:6.1.0'
   compile 'com.android.support:support-v4:21.0.3'
   compile 'com.android.support:appcompat-v7:21.0.3'
+  compile 'com.android.support:recyclerview-v7:21.0.+'
+  compile "com.android.support:appcompat-v7:22.1.0"
   compile 'com.nineoldandroids:library:2.4.0'
   compile 'com.squareup.picasso:picasso:2.5.0'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
