--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
   compile 'org.michaelevans.colorart:library:0.0.3'
   compile 'com.github.thiagokimo:alexei-library:1.+'
   compile 'de.greenrobot:eventbus:2.4.0'
+  compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
   compile project(':network')
   compile fileTree(include: ['*.jar'], dir: 'libs')
   compile project(':PhotoView')
