--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
   compile 'de.greenrobot:eventbus:2.4.0'
   compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
   compile project(':network')
+  compile project(':data')
   compile fileTree(include: ['*.jar'], dir: 'libs')
   compile project(':PhotoView')
 }
