--- a/data/build.gradle
+++ b/data/build.gradle
@@ -24,11 +24,9 @@ android {
 }
 
 dependencies {
-
-  apt 'com.google.dagger:dagger-compiler:2.0-SNAPSHOT'
-
-  compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
-
-
+  compile 'com.google.dagger:dagger:2.1-SNAPSHOT'
+  apt 'com.google.dagger:dagger-compiler:2.1-SNAPSHOT'
+  compile 'org.glassfish:javax.annotation:10.0-b28'
   compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile project(':network')
 }
