--- a/data/build.gradle
+++ b/data/build.gradle
@@ -27,6 +27,8 @@ dependencies {
   compile 'com.google.dagger:dagger:2.1-SNAPSHOT'
   apt 'com.google.dagger:dagger-compiler:2.1-SNAPSHOT'
   compile 'org.glassfish:javax.annotation:10.0-b28'
+  compile 'com.j256.ormlite:ormlite-core:4.47'
+  compile 'com.j256.ormlite:ormlite-android:4.47'
   compile fileTree(dir: 'libs', include: ['*.jar'])
   compile project(':network')
 }
