--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
   compile 'com.github.thiagokimo:alexei-library:1.+'
   compile 'de.greenrobot:eventbus:2.4.0'
   compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
+  compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
   compile project(':network')
   compile project(':data')
   compile fileTree(include: ['*.jar'], dir: 'libs')
