--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
   compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
   compile 'com.bignerdranch.android:recyclerview-multiselect:+'
+  compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
   compile project(':network')
   compile project(':data')
   compile fileTree(include: ['*.jar'], dir: 'libs')
