CC: optimize imports, gradle dependencies update

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,27 +41,22 @@ dependencies {
   compile 'com.google.dagger:dagger:2.1-SNAPSHOT'
   apt 'com.google.dagger:dagger-compiler:2.1-SNAPSHOT'
   compile 'com.jakewharton:butterknife:6.1.0'
-  compile 'com.android.support:support-v4:21.0.3'
-  compile 'com.android.support:appcompat-v7:21.0.3'
-  compile 'com.android.support:recyclerview-v7:21.0.+'
-  compile "com.android.support:appcompat-v7:22.1.0"
+  compile 'io.reactivex:rxandroid:0.24.0'
+  compile 'org.glassfish:javax.annotation:10.0-b28'
+  compile 'de.greenrobot:eventbus:2.4.0'
+  compile 'com.android.support:support-v4:22.1.1'
+  compile "com.android.support:appcompat-v7:22.1.1"
+  compile 'com.android.support:recyclerview-v7:22.1.1'
   compile 'com.nineoldandroids:library:2.4.0'
-  compile 'com.squareup.picasso:picasso:2.5.0'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
   compile 'com.google.code.gson:gson:2.3'
-  compile 'io.reactivex:rxandroid:0.24.0'
   compile 'com.google.code.findbugs:jsr305:1.3.9'
-  compile 'org.glassfish:javax.annotation:10.0-b28'
-  compile 'com.squareup.picasso:picasso:2.5.0'
   compile 'org.michaelevans.colorart:library:0.0.3'
-  compile 'com.github.thiagokimo:alexei-library:1.+'
-  compile 'de.greenrobot:eventbus:2.4.0'
   compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4'
   compile 'com.bignerdranch.android:recyclerview-multiselect:+'
-  compile 'com.bartoszlipinski.recyclerviewheader:library:1.2.0'
   compile project(':network')
   compile project(':data')
-  compile fileTree(include: ['*.jar'], dir: 'libs')
   compile project(':PhotoView')
+  compile fileTree(include: ['*.jar'], dir: 'libs')
 }
